@@ -1,3 +1,10 @@
+2005-08-16  Zdenek Dvorak  <dvorakz@suse.cz>
+
+	* tree-ssa-loop-im.c (MAX_LSM_NAME_LENGTH, lsm_tmp_name,
+	lsm_tmp_name_length): New.
+	(lsm_tmp_name_add, gen_lsm_tmp_name, get_lsm_tmp_name): New functions.
+	(schedule_sm): Use get_lsm_tmp_name instead of "lsm_tmp".
+
 2005-08-16  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
 	    Andreas Krebbel  <krebbel1@de.ibm.com>
 
